--- a/index.html
+++ b/index.html
@@ -3,44 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <script defer src="./assets/js/json.js"></script>
     <title>Document</title>
-    <script defer src="./assets/js/attributes.js"></script>
   </head>
   <body>
-    <section>
-      <img id="profilePhoto" src="" alt="" />
-      <img
-        class="backgroundImage"
-        src="/assets/images/1678775422_bogatyr-club-p-zadnii-fon-gori-foni-krasivo-2.jpg"
-        alt="фон"
-      />
-      <img
-        class="secondaryImage"
-        src="./assets/images/pexels-photo-6528047.jpeg"
-        alt=""
-      />
-      <main>
-        <button class="button">Species</button>
-        <div class="speciesDiv"></div>
-        <button class="button">Existence</button>
-        <div class="existenceDiv"></div>
-        <button class="button">Colors</button>
-        <div class="colorsDiv"></div>
-        <button class="burgerButton">
-          <i class="fa-solid fa-bars"></i>
-        </button>
-      </main>
-      <button class="infoButton" id="downloadButton">Download</button>
-      <i class="fa-solid fa-heart heartIcon"></i>
-      <article id="userProfile"></article>
-    </section>
+    <article>
+      <button id="bt">Downland</button>
+      <p id="cat-fact"></p>
+    </article>
   </body>
 </html>
